SERVER-60832 Readd and fix gcov code coverage variant